--- a/infra/playbook.yml
+++ b/infra/playbook.yml
@@ -50,92 +50,100 @@
           PATH: "{{ ansible_env.PATH }}:{{ brew.prefix }}/opt/asdf/shims:{{ brew.prefix }}/opt/asdf/bin"
 
   tasks:
-    - name: Check Homebrew installation
-      command: "{{ brew.bin }}/brew --version"
-      register: brew_check
-      changed_when: false
-      failed_when: false
-
-    - name: Prepare Homebrew installation directories (Linux)
+    # =====================================================
+    # Homebrew Setup and Package Management
+    # =====================================================
+    - name: Setup Homebrew and install packages
       block:
-        - name: Create /home/linuxbrew directory
-          file:
-            path: /home/linuxbrew
-            state: directory
-            mode: '0755'
-            owner: "{{ ansible_user_id }}"
-            group: "{{ ansible_user_id }}"
-          become: yes
+        - name: Check Homebrew installation
+          command: "{{ brew.bin }}/brew --version"
+          register: brew_check
+          changed_when: false
+          failed_when: false
 
-        - name: Create /home/linuxbrew/.linuxbrew directory
-          file:
-            path: /home/linuxbrew/.linuxbrew
-            state: directory
-            mode: '0755'
-            owner: "{{ ansible_user_id }}"
-            group: "{{ ansible_user_id }}"
-          become: yes
-      when:
-        - brew_check.rc != 0
-        - ansible_facts.os_family == "Debian"
+        - name: Prepare Homebrew installation directories (Linux)
+          block:
+            - name: Create /home/linuxbrew directory
+              file:
+                path: /home/linuxbrew
+                state: directory
+                mode: '0755'
+                owner: "{{ ansible_user_id }}"
+                group: "{{ ansible_user_id }}"
+              become: yes
 
-    - name: Install Homebrew
-      shell: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
-      when: brew_check.rc != 0
-      environment:
-        NONINTERACTIVE: "1"
-        HOME: "{{ paths.home }}"
-        USER: "{{ ansible_user_id }}"
+            - name: Create /home/linuxbrew/.linuxbrew directory
+              file:
+                path: /home/linuxbrew/.linuxbrew
+                state: directory
+                mode: '0755'
+                owner: "{{ ansible_user_id }}"
+                group: "{{ ansible_user_id }}"
+              become: yes
+          when:
+            - brew_check.rc != 0
+            - ansible_facts.os_family == "Debian"
 
-    - name: Install essential system dependencies
-      block:
-        - name: Install core dependencies (Debian/Ubuntu)
-          apt:
-            name: 
-              - build-essential
-              - unzip
-              - curl
-              - wget
-              - git
-              - gnupg
-              - dirmngr
-              - ca-certificates
-              - software-properties-common
-              - libssl-dev
-              - libffi-dev
-              - zlib1g-dev
-              - libbz2-dev
-              - libreadline-dev
-              - libsqlite3-dev
-              - xz-utils
-            update_cache: yes
-            state: present
-          become: yes
-          when: ansible_facts.os_family == "Debian"
+        - name: Install Homebrew
+          shell: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"
+          when: brew_check.rc != 0
+          environment:
+            NONINTERACTIVE: "1"
+            HOME: "{{ paths.home }}"
+            USER: "{{ ansible_user_id }}"
 
-        - name: Install core dependencies (macOS)
-          community.general.homebrew:
-            name:
-              - unzip
-              - gnupg
-            state: present
-          when: ansible_facts.os_family == "Darwin"
+        - name: Install essential system dependencies
+          block:
+            - name: Install core dependencies (Debian/Ubuntu)
+              apt:
+                name: 
+                  - build-essential
+                  - unzip
+                  - curl
+                  - wget
+                  - git
+                  - gnupg
+                  - dirmngr
+                  - ca-certificates
+                  - software-properties-common
+                  - libssl-dev
+                  - libffi-dev
+                  - zlib1g-dev
+                  - libbz2-dev
+                  - libreadline-dev
+                  - libsqlite3-dev
+                  - xz-utils
+                update_cache: yes
+                state: present
+              become: yes
+              when: ansible_facts.os_family == "Debian"
 
-    - name: Parse Brewfile to extract package names
-      shell: |
-        grep '^brew ' "{{ playbook_dir }}/Brewfile" | sed 's/^brew "\(.*\)"/\1/' | tr '\n' ' '
-      register: brewfile_packages_raw
-      changed_when: false
+            - name: Install core dependencies (macOS)
+              community.general.homebrew:
+                name:
+                  - unzip
+                  - gnupg
+                state: present
+              when: ansible_facts.os_family == "Darwin"
 
-    - name: Set brewfile packages fact
-      set_fact:
-        brewfile_packages: "{{ brewfile_packages_raw.stdout.strip().split() }}"
+        - name: Parse Brewfile to extract package names
+          shell: |
+            grep '^brew ' "{{ playbook_dir }}/Brewfile" | sed 's/^brew "\(.*\)"/\1/' | tr '\n' ' '
+          register: brewfile_packages_raw
+          changed_when: false
 
-    - name: Install packages from Brewfile
-      shell: "{{ brew.bin }}/brew bundle --file={{ playbook_dir }}/Brewfile"
-      register: brew_bundle_result
-      changed_when: "'Installing' in brew_bundle_result.stdout or 'Upgrading' in brew_bundle_result.stdout"
+        - name: Set brewfile packages fact
+          set_fact:
+            brewfile_packages: "{{ brewfile_packages_raw.stdout.strip().split() }}"
 
+        - name: Install packages from Brewfile
+          shell: "{{ brew.bin }}/brew bundle --file={{ playbook_dir }}/Brewfile"
+          register: brew_bundle_result
+          changed_when: "'Installing' in brew_bundle_result.stdout or 'Upgrading' in brew_bundle_result.stdout"
+
+    # =====================================================
+    # Zsh Configuration and Setup
+    # =====================================================
     - name: Configure zsh as default shell and install zplug
       block:
         - name: Install zplug plugin manager
@@ -164,6 +172,38 @@
           become: yes
           when: current_shell.stdout != brew.zsh
 
+        - name: Verify zsh configuration
+          block:
+            - name: Check if .zshrc exists
+              stat:
+                path: "{{ paths.zshrc }}"
+              register: zshrc_final_check
+
+            - name: Test zsh configuration syntax
+              shell: "{{ brew.zsh }} -n {{ paths.zshrc }}"
+              register: zsh_syntax_check
+              changed_when: false
+              failed_when: false
+              when: zshrc_final_check.stat.exists
+
+            - name: Test interactive zsh loading
+              shell: "timeout 10 {{ brew.zsh }} -i -c 'echo ZSH_LOADED_OK && exit 0'"
+              register: zsh_interactive_test
+              changed_when: false
+              failed_when: false
+              when: zshrc_final_check.stat.exists
+
+            - name: Display verification results
+              debug:
+                msg:
+                  - "=== ZSH Configuration Verification ==="
+                  - ".zshrc exists: {{ 'YES' if zshrc_final_check.stat.exists else 'NO' }}"
+                  - "Syntax Check: {{ 'PASSED' if (zshrc_final_check.stat.exists and zsh_syntax_check.rc == 0) else 'SKIPPED/FAILED' }}"
+                  - "Interactive Load: {{ 'PASSED' if (zshrc_final_check.stat.exists and zsh_interactive_test.rc == 0) else 'SKIPPED/FAILED' }}"
+
+    # =====================================================
+    # Encryption and Dotfiles Management
+    # =====================================================
     - name: Setup encryption and dotfiles management
       block:
         - name: Create configuration directories
@@ -247,35 +287,9 @@
       environment:
         AGE_IDENTITIES_FILE: "{{ paths.age_key }}"
 
-    - name: Verify zsh configuration
-      block:
-        - name: Check if .zshrc exists
-          stat:
-            path: "{{ paths.zshrc }}"
-          register: zshrc_final_check
-
-        - name: Test zsh configuration syntax
-          shell: "{{ brew.zsh }} -n {{ paths.zshrc }}"
-          register: zsh_syntax_check
-          changed_when: false
-          failed_when: false
-          when: zshrc_final_check.stat.exists
-
-        - name: Test interactive zsh loading
-          shell: "timeout 10 {{ brew.zsh }} -i -c 'echo ZSH_LOADED_OK && exit 0'"
-          register: zsh_interactive_test
-          changed_when: false
-          failed_when: false
-          when: zshrc_final_check.stat.exists
-
-        - name: Display verification results
-          debug:
-            msg:
-              - "=== ZSH Configuration Verification ==="
-              - ".zshrc exists: {{ 'YES' if zshrc_final_check.stat.exists else 'NO' }}"
-              - "Syntax Check: {{ 'PASSED' if (zshrc_final_check.stat.exists and zsh_syntax_check.rc == 0) else 'SKIPPED/FAILED' }}"
-              - "Interactive Load: {{ 'PASSED' if (zshrc_final_check.stat.exists and zsh_interactive_test.rc == 0) else 'SKIPPED/FAILED' }}"
-
+    # =====================================================
+    # ASDF Version Management
+    # =====================================================
     - name: Check .tool-versions file exists
       stat:
         path: "{{ paths.tool_versions }}"
@@ -419,60 +433,68 @@
         msg: "Skipping asdf setup: .tool-versions file not found at {{ paths.tool_versions }}"
       when: not tool_versions_file.stat.exists
 
-    - name: Discover custom scripts
-      ansible.builtin.find:
-        paths: "{{ playbook_dir }}/bin"
-        patterns: "*.sh"
-        file_type: file
-      register: custom_scripts_found
+    # =====================================================
+    # Custom Scripts Installation
+    # =====================================================
+    - name: Install custom scripts
+      block:
+        - name: Discover custom scripts
+          ansible.builtin.find:
+            paths: "{{ playbook_dir }}/bin"
+            patterns: "*.sh"
+            file_type: file
+          register: custom_scripts_found
 
-    - name: Build structured script information
-      set_fact:
-        custom_scripts_info: >-
-          {{
-            (custom_scripts_info | default([])) + [{
-              'name': (item | basename | regex_replace('\.sh$', '')),
-              'path': item
-            }]
-          }}
-      loop: "{{ custom_scripts_found.files | map(attribute='path') | list }}"
-      when: (custom_scripts_found.matched | default(0)) > 0
+        - name: Build structured script information
+          set_fact:
+            custom_scripts_info: >-
+              {{
+                (custom_scripts_info | default([])) + [{
+                  'name': (item | basename | regex_replace('\.sh$', '')),
+                  'path': item
+                }]
+              }}
+          loop: "{{ custom_scripts_found.files | map(attribute='path') | list }}"
+          when: (custom_scripts_found.matched | default(0)) > 0
 
-    - name: Check if target commands already exist
-      shell: |
-        command -v {{ item.name }}
-      register: command_existence_check
-      changed_when: false
-      failed_when: false
-      loop: "{{ custom_scripts_info | default([]) }}"
-      loop_control:
-        label: "{{ item.name }}"
-        index_var: script_index
-      environment:
-        PATH: "{{ brew.bin }}:{{ ansible_env.PATH }}"
-        HOME: "{{ paths.home }}"
+        - name: Check if target commands already exist
+          shell: |
+            command -v {{ item.name }}
+          register: command_existence_check
+          changed_when: false
+          failed_when: false
+          loop: "{{ custom_scripts_info | default([]) }}"
+          loop_control:
+            label: "{{ item.name }}"
+            index_var: script_index
+          environment:
+            PATH: "{{ brew.bin }}:{{ ansible_env.PATH }}"
+            HOME: "{{ paths.home }}"
 
-    - name: Execute custom scripts for missing commands
-      shell: |
-        echo "Installing {{ item.name }}..."
-        chmod +x "{{ item.path }}"
-        "{{ item.path }}"
-      register: custom_script_execution
-      failed_when: false
-      changed_when: custom_script_execution.rc == 0
-      loop: "{{ custom_scripts_info | default([]) }}"
-      loop_control:
-        label: "{{ item.name }}"
-        index_var: script_index
-      when: command_existence_check.results[script_index].rc != 0
-      environment:
-        HOME: "{{ paths.home }}"
-        BREW_BIN: "{{ brew.bin }}"
-        BREW_PREFIX: "{{ brew.prefix }}"
-        OS_FAMILY: "{{ ansible_facts.os_family }}"
-        ARCH: "{{ ansible_facts.machine }}"
-        PATH: "{{ brew.bin }}:{{ ansible_env.PATH }}"
-    
+        - name: Execute custom scripts for missing commands
+          shell: |
+            echo "Installing {{ item.name }}..."
+            chmod +x "{{ item.path }}"
+            "{{ item.path }}"
+          register: custom_script_execution
+          failed_when: false
+          changed_when: custom_script_execution.rc == 0
+          loop: "{{ custom_scripts_info | default([]) }}"
+          loop_control:
+            label: "{{ item.name }}"
+            index_var: script_index
+          when: command_existence_check.results[script_index].rc != 0
+          environment:
+            HOME: "{{ paths.home }}"
+            BREW_BIN: "{{ brew.bin }}"
+            BREW_PREFIX: "{{ brew.prefix }}"
+            OS_FAMILY: "{{ ansible_facts.os_family }}"
+            ARCH: "{{ ansible_facts.machine }}"
+            PATH: "{{ brew.bin }}:{{ ansible_env.PATH }}"
+
+    # =====================================================
+    # Final Verification and Summary
+    # =====================================================
     - name: Final verification and comprehensive summary
       block:
         - name: Check standard tool versions
