--- a/.github/workflows/ansible-basic-test.yml
+++ b/.github/workflows/ansible-basic-test.yml
@@ -34,15 +34,19 @@ jobs:
         with:
           python-version: '3.11'
 
-      - name: Install Ansible
+      - name: Install Ansible and yamllint
         run: |
           python -m pip install --upgrade pip
-          pip install ansible
+          pip install ansible yamllint
 
       - name: Create vault password file
         run: |
           echo "${{ secrets.ANSIBLE_VAULT_PASSWORD }}" > .vault_pass
           chmod 600 .vault_pass
+        working-directory: infra
+
+      - name: Run YAML lint
+        run: yamllint .
         working-directory: infra
 
       - name: Run Ansible syntax check
