--- a/infra/Makefile
+++ b/infra/Makefile
@@ -1,7 +1,7 @@
 INVENTORY=inventory.ini
 VAULT_FILE=.vault_pass
 
-.PHONY: check apply syntax clean
+.PHONY: check apply syntax clean yamllint
 
 syntax:
 	ansible-playbook --syntax-check -i $(INVENTORY) playbook.yml
@@ -14,6 +14,9 @@ apply:
 
 debug:
 	ansible-playbook -i $(INVENTORY) playbook.yml --check --diff -vvv --vault-password-file $(VAULT_FILE) --ask-become-pass
+
+yamllint:
+	yamllint .
 
 clean:
 	rm -f $(VAULT_FILE)
