--- a/.github/workflows/yaml-lint.yml
+++ b/.github/workflows/yaml-lint.yml
@@ -20,7 +20,6 @@ jobs:
     name: YAML Lint
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -40,7 +39,9 @@ jobs:
         working-directory: infra
 
       - name: Run YAML lint on config directory
-        run: yamllint . || true  # Allow failure since config may have different requirements
+        run: |
+          # Allow failure since config may have different requirements
+          yamllint . || true
         working-directory: config
         continue-on-error: true
 
